# fluent-bit

./: CMakeLists.txt  Dockerfile
plugins/: CMakeLists.txt
plugins/out_pulsar/: CMakeLists.txt  pulsar_client.c
plugins/out_pulsar_ws/: CMakeLists.txt  pulsar_ws.c
